src/scss/components/_button.scss
.button {
    display: block;

    box-sizing: border-box;
    border: none;
    padding: 0;
    outline: none;

    background-color: transparent;

    cursor: pointer;

    &--create {
        position: absolute;
        bottom: 0;
        left: 50%;
        transform: translate(-50%, 50%);
        z-index: 1;

        height: 55px;
        width: 55px;
        border: solid 4px $color4;
        border-radius: 50%;

        background-color: $color2;
        color: $color0;

        font-size: 38px;

        transition: background-color 0.5s, transform 0.5s;

        &.active {
            background-color: $color4;
        }

        &:hover {
            transform: translate(-50%, 50%) scale(1.1);

            & > span {
                transform: rotateZ(360deg);
            }
        }

        & > span {
            display: inline-block;
            text-align: center;
            vertical-align: middle;

            position: relative;
            top: -3px;
            height: 55px;
            transform: rotateZ(0);

            height: 55px;
            margin: 0;
            padding: 0;

            line-height: 55px;

            transition: transform 1s;
        }
    }

    &--priority {
        display: inline-block;

        width: 30%;
        margin: 0 1.5%;
        padding: 0.25em;
        border-radius: 1rem;

        background-color: transparent;

        font-size: 0.8em;

        transition: background-color 1s;

        &:hover, &.active {
            color: $color0;
        }

        &--low {
            border: solid 1px $color10;
            
            color: $color10;

            &:hover, &.active {
                background-color: $color10;
            }
        }

        &--medium {
            border: solid 1px $color5;

            color: $color5;

            &:hover, &.active {
                background-color: $color5;
            }
        }

        &--high {
            border: solid 1px $color3;

            color: $color3;

            &:hover, &.active {
                background-color: $color3;
            }
        }
    }

    &--close {
        position: absolute;
        bottom: $spacing;
        right: $spacing * 4;

        height: 1.5rem;
        width: 1.5rem;

        color: $color3;

        font-size: 1rem;
        font-weight: bold;
        text-decoration: underline;

        &:hover {
            color: lighten($color3, 10%);
        }

        @media (min-width: $tablet) {
            right: $spacing * 9;
        }
    }

    &--expand {
        position: absolute;
        top: 50%;
        right: $spacing * 4;
        transform: translateY(-50%) rotateZ(0deg);

        height: 1rem;
        width: 1rem;
        border: none;

        transition: transform 0.5s;
        animation: fadeIn 1s forwards;

        &.expanded {
            transform: translateY(-50%) rotateZ(180deg);
        }

        & > svg {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);

            fill: $color0;
        }
    }

    &--radio {
        position: absolute;
        top: 50%;
        right: $spacing * 1.5;
        transform: translateY(-50%);

        background-color: transparent;

        input {
            opacity: 0;
            cursor: pointer;
        }

        &:hover label:before {
            background-color: lighten($color4, 20%);
        }
        
        label {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);

            height: 1.25rem;
            width: 1.25rem;


            &:before {
                content: '';
                display: block;
                
                position: absolute;
    
                height: 100%;
                width: 100%;
                border-radius: 50%;
    
                background-color: $color0;

                transition: background-color 1s;

                .active & {
                    background-color: $color4;
                }
            }

            &:after {
                content: '';
                display: block;

                position: absolute;

                height: 100%;
                width: 100%;

                background-image: url('../assets/icons/tick.svg');
                background-size: 50% 50%;
                background-position: center;
                background-repeat: no-repeat;

                opacity: 0;
                
                transition: opacity 0.5s ease 0.5s;

                .active & {
                    opacity: 1;
                }
            }
        }
    }

    &--fingerprint {
        position: absolute;
        top: $spacing * 1.5;
        right: $spacing * 1.5;

        width: 3.5rem;

        transition: transform 0.5s;

        &:hover {
            transform: scale(1.25);
        }

        svg {
            height: 100%;
            width: 100%;
        }
    }
}

